--- a/modules/admin/locales/id/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/id/LC_MESSAGES/admin.po
@@ -9,30 +9,30 @@ msgstr ""
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:422
 msgid "<strong>The configuration uses the default secret salt</strong>. Make sure to modify the <code>secretsalt</code> option in the SimpleSAMLphp configuration in production environments. <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-install\">Read more about the maintenance of SimpleSAMLphp</a>."
-msgstr ""
+msgstr "<strong>Konfigurasi ini menggunakan secret salt default</strong>. Pastikan untuk memodifikasi opsi <code>secretsalt</code> dalam konfigurasi SimpleSAMLphp di lingkungan produksi. <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-install\">Baca lebih lanjut tentang pemeliharaan SimpleSAMLphp</a>."
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:412
 msgid "<strong>You are not using HTTPS</strong> to protect communications with your users. HTTP works fine for testing purposes, but in a production environment you should use HTTPS. <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance\">Read more about the maintenance of SimpleSAMLphp</a>."
-msgstr "<strong>Anda tidak menggunakan HTTPS</strong> - komunikasi yang dienkripsi dengan user. HTTP bekerja baik-baik saja untuk tujuan pengetesan , tapi dalam lingkungan produksi, Anda sebaiknya menggunakan HTTPS. [ <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance\">Baca lebih lanjut tentang proses pemeliraan SimpleSAMLphp.</a> ]"
+msgstr "<strong>Anda tidak menggunakan HTTPS</strong> untuk melindungi komunikasi dengan pengguna Anda. HTTP berfungsi dengan baik untuk tujuan pengujian, tetapi dalam lingkungan produksi Anda harus menggunakan HTTPS. <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance\">Baca lebih lanjut tentang pemeliharaan SimpleSAMLphp</a>."
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:175
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:176
 msgid "ADFS IdP metadata"
-msgstr ""
+msgstr "Metadata ADFS IdP"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:173
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:174
 msgid "ADFS SP metadata"
-msgstr ""
+msgstr "Metadata ADFS SP"
 
 msgid "An error occurred"
-msgstr ""
+msgstr "Terjadi kesalahan"
 
 msgid "Authentication data"
-msgstr ""
+msgstr "Data otentikasi"
 
 msgid "Back"
-msgstr ""
+msgstr "Kembali"
 
 msgid "Certificates"
 msgstr "Sertifikat"
@@ -41,79 +41,79 @@ msgid "Checking your PHP installation"
 msgstr "Memerika instalasi PHP Anda"
 
 msgid "Checks"
-msgstr ""
+msgstr "Pemeriksaan"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Menu.php:33
 msgid "Configuration"
 msgstr "Konfigurasi"
 
 msgid "Content of jpegPhoto attribute"
-msgstr ""
+msgstr "Isi atribut jpegPhoto"
 
 msgid "Converted metadata"
 msgstr "Metadata yang telah dikonvesi"
 
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Salin ke papan klip"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:228
 msgid "Date/Time Extension"
-msgstr ""
+msgstr "Perpanjangan Tanggal/Waktu"
 
 msgid "Deprecated"
 msgstr "Usang"
 
 msgid "Details"
-msgstr ""
+msgstr "Detail"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:133
 msgid "Diagnostics on hostname, port and protocol"
 msgstr "Diagnostik pada hostname, port dan protokol"
 
 msgid "EntityID"
-msgstr ""
+msgstr "EntityID"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Menu.php:41
 msgid "Federation"
 msgstr "Federasi"
 
 msgid "Format"
-msgstr ""
+msgstr "Format"
 
 msgid "Go back to SimpleSAMLphp installation page"
-msgstr ""
+msgstr "Kembali ke halaman instalasi SimpleSAMLphp"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:234
 msgid "Hashing function"
-msgstr ""
+msgstr "Fungsi hashing"
 
 msgid "Hi, this is the status page of SimpleSAMLphp. Here you can see if your session is timed out, how long it lasts until it times out and all the attributes that are attached to your session."
-msgstr ""
+msgstr "Hai, ini adalah halaman status SimpleSAMLphp. Di sini Anda dapat melihat apakah sesi Anda habis, berapa lama waktu yang tersisa hingga habis, dan semua atribut yang dilampirkan pada sesi Anda."
 
 msgid "Hosted IdP metadata present"
-msgstr ""
+msgstr "Metadata IdP yang dihosting hadir"
 
 msgid "Hosted entities"
-msgstr ""
+msgstr "Entitas yang dihosting"
 
 msgid "In SAML 2.0 Metadata XML format:"
-msgstr "Dalam format XML Metadata SAML 2.0"
+msgstr "Dalam format XML Metadata SAML 2.0:"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:137
 msgid "Information on your PHP installation"
-msgstr ""
+msgstr "Informasi tentang instalasi PHP Anda"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:270
 msgid "JSON support"
-msgstr ""
+msgstr "Dukungan JSON"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:314
 msgid "LDAP extension"
-msgstr ""
+msgstr "Ekstensi LDAP"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:313
 msgid "LDAP extension (required if an LDAP backend is used)"
-msgstr ""
+msgstr "Ekstensi LDAP (diperlukan jika backend LDAP digunakan)"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:184
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:485
@@ -121,168 +121,168 @@ msgstr ""
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:149
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Test.php:156
 msgid "Log out"
-msgstr ""
+msgstr "Keluar"
 
 msgid "Logged out"
-msgstr ""
+msgstr "Anda telah keluar"
 
 msgid "Logout"
-msgstr "Logout"
+msgstr "Keluar"
 
 msgid "Look up metadata for entity:"
-msgstr ""
+msgstr "Mencari metadata untuk entitas:"
 
 msgid "Matching key-pair for signing assertions"
-msgstr ""
+msgstr "Mencocokkan pasangan kunci untuk menandatangani pernyataan"
 
 msgid "Matching key-pair for signing assertions (rollover key)"
-msgstr ""
+msgstr "Mencocokkan pasangan kunci untuk menandatangani pernyataan (kunci rollover)"
 
 msgid "Matching key-pair for signing metadata"
-msgstr ""
+msgstr "Mencocokkan pasangan kunci untuk menandatangani metadata"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:344
 msgid "Memcache or Memcached extension"
-msgstr ""
+msgstr "Ekstensi Memcache atau Memcached"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:341
 msgid "Memcache or Memcached extension (required if the memcache backend is used)"
-msgstr ""
+msgstr "Ekstensi Memcache atau Memcached (diperlukan jika backend memcache digunakan)"
 
 msgid "Metadata"
 msgstr "Metadata"
 
 msgid "Metadata parser"
-msgstr "Parser metadata"
+msgstr "Pengurai metadata"
 
 msgid "Modules"
-msgstr ""
+msgstr "Modul"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:282
 msgid "Multibyte String extension"
-msgstr ""
+msgstr "Ekstensi String Multibyte"
 
 msgid "No file selected."
-msgstr ""
+msgstr "Ttak ada berkas yang dipilih."
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:246
 msgid "OpenSSL"
-msgstr ""
+msgstr "OpenSSL"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:306
 msgid "PDO Extension (required if a database backend is used)"
-msgstr ""
+msgstr "Ekstensi PDO (diperlukan jika backend basis data digunakan)"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:307
 msgid "PDO extension"
-msgstr ""
+msgstr "Perpanjangan PDO"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:211
-#, php-format
+#, no-php-format,php-format
 msgid "PHP %minimum% or newer is needed. You are running: %current%"
-msgstr ""
+msgstr "PHP %minimum% atau yang lebih baru diperlukan. Anda sedang menjalankan: %current%"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:264
 msgid "PHP intl extension"
-msgstr ""
+msgstr "Ekstensi PHP intl"
 
 msgid "Parse"
 msgstr "Parse"
 
 msgid "Radius extension"
-msgstr ""
+msgstr "Perpanjangan radius"
 
 msgid "Radius extension (required if a radius backend is used)"
-msgstr ""
+msgstr "Ekstensi radius (diperlukan jika backend radius digunakan)"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:258
 msgid "Regular expression support"
-msgstr ""
+msgstr "Dukungan ekspresi reguler"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:171
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:172
 msgid "SAML 2.0 IdP metadata"
-msgstr ""
+msgstr "Metadata SAML 2.0 IdP"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:169
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Federation.php:170
 msgid "SAML 2.0 SP metadata"
-msgstr ""
+msgstr "Metadata SAML 2.0 SP"
 
 msgid "SAML Metadata"
-msgstr ""
+msgstr "Metadata SAML"
 
 msgid "SAML Subject"
-msgstr ""
+msgstr "Subjek SAML"
 
 msgid "Search"
-msgstr ""
+msgstr "Cari"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:300
 msgid "Session extension"
-msgstr ""
+msgstr "Perpanjangan sesi"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:299
 msgid "Session extension (required if PHP sessions are used)"
-msgstr ""
+msgstr "Ekstensi sesi (diperlukan jika sesi PHP digunakan)"
 
 msgid "SimpleSAMLphp Metadata"
-msgstr ""
+msgstr "Metadata SimpleSAMLphp"
 
 msgid "SimpleSAMLphp Show Metadata"
-msgstr ""
+msgstr "SimpleSAMLphp Tampilkan Metadata"
 
 msgid "SimpleSAMLphp installation page"
 msgstr "Halaman instalasi SimpleSAMLphp"
 
 msgid "SimpleSAMLphp is installed in:"
-msgstr ""
+msgstr "SimpleSAMLphp diinstal di:"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:276
 msgid "Standard PHP library (SPL)"
-msgstr ""
+msgstr "Perpustakaan PHP standar (SPL)"
 
 msgid "Technical information"
-msgstr ""
+msgstr "Informasi teknis"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Menu.php:37
 msgid "Test"
-msgstr ""
+msgstr "Uji"
 
 msgid "Test Authentication Sources"
-msgstr ""
+msgstr "Menguji Sumber Autentikasi"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:430
 msgid "The \"secretsalt\" configuration option may not contain a `%` sign."
-msgstr ""
+msgstr "Opsi konfigurasi \"secretsalt\" mungkin tidak mengandung tanda `%`."
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:366
 msgid "The <code>technicalcontact_email</code> configuration option should be set"
-msgstr ""
+msgstr "Opsi konfigurasi <code>technicalcontact_email</code> harus ditetapkan"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:372
 msgid "The auth.adminpassword configuration option must be set"
-msgstr ""
+msgstr "Opsi konfigurasi auth.adminpassword harus ditetapkan"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:437
 msgid "The cURL PHP extension is missing. Cannot check for SimpleSAMLphp updates."
-msgstr ""
+msgstr "Ekstensi PHP cURL tidak ada. Tidak dapat memeriksa pembaruan SimpleSAMLphp."
 
 msgid "Tools"
 msgstr "Peralatan"
 
 msgid "Trusted entities"
-msgstr ""
+msgstr "Entitas tepercaya"
 
 msgid "Type:"
-msgstr ""
+msgstr "Tipe:"
 
 msgid "Use this if you are using a SimpleSAMLphp entity on the other side:"
-msgstr ""
+msgstr "Gunakan ini jika Anda menggunakan entitas SimpleSAMLphp di sisi lain:"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:252
 msgid "XML DOM"
-msgstr ""
+msgstr "XML DOM"
 
 msgid "XML metadata"
 msgstr "metadata XML"
@@ -293,19 +293,19 @@ msgstr "Konverter XML ke metadata SimpleSAMLphp"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:462
 msgid "You are running an outdated version of SimpleSAMLphp. Please update to <a href=\"%latest%\">the latest version</a> as soon as possible."
-msgstr ""
+msgstr "Anda menjalankan versi SimpleSAMLphp yang sudah ketinggalan zaman. Harap perbarui ke <a href=\"%latest%\">versi terbaru</a> sesegera mungkin."
 
 msgid "You are running version <kbd>%version%</kbd>."
-msgstr ""
+msgstr "Anda sedang menjalankan versi <kbd>%version%</kbd>."
 
 msgid "You can get the metadata XML on a dedicated URL:"
-msgstr ""
+msgstr "Anda bisa mendapatkan XML metadata pada URL khusus:"
 
 msgid "You have been logged out."
-msgstr ""
+msgstr "Kamu Sudah Keluar."
 
 msgid "You have the following modules installed"
-msgstr ""
+msgstr "Anda telah menginstal modul-modul berikut ini"
 
 msgid "Your attributes"
 msgstr "Attribut Anda"
@@ -315,53 +315,53 @@ msgstr "Session anda valid untuk %remaining% detik dari sekarang."
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:240
 msgid "ZLib"
-msgstr ""
+msgstr "ZLib"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:288
 msgid "cURL (might be required by some modules)"
-msgstr ""
+msgstr "cURL (mungkin diperlukan oleh beberapa modul)"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:291
 msgid "cURL (required if automatic version checks are used, also by some modules)"
-msgstr ""
+msgstr "cURL (diperlukan jika pemeriksaan versi otomatis digunakan, juga oleh beberapa modul)"
 
 msgid "default"
-msgstr ""
+msgstr "bawaan"
 
 msgid "disabled"
-msgstr ""
+msgstr "dinonaktifkan"
 
 msgid "enabled"
-msgstr ""
+msgstr "difungsikan"
 
 msgid "expired"
-msgstr ""
+msgstr "kadaluwarsa"
 
 msgid "expires"
-msgstr ""
+msgstr "berakhir"
 
 msgid "means the module is not enabled"
-msgstr ""
+msgstr "berarti modul tidak diaktifkan"
 
 msgid "new"
-msgstr ""
+msgstr "baru"
 
 msgid "not set"
-msgstr ""
+msgstr "tidak di atur"
 
 msgid "optional"
-msgstr ""
+msgstr "opsional"
 
 msgid "or select a file:"
-msgstr ""
+msgstr "atau pilih sebuah file:"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:333
 msgid "predis/predis (required if the redis data store is used)"
-msgstr ""
+msgstr "predis/predis (diperlukan jika penyimpanan data redis digunakan)"
 
 #: /home/runner/work/simplesamlphp/simplesamlphp/modules/admin/src/Controller/Config.php:334
 msgid "predis/predis library"
-msgstr ""
+msgstr "perpustakaan predis/predis"
 
 msgid "required"
-msgstr ""
+msgstr "diperlukan"
